# ilemnt-dual-rate-ukf

./: CMakeLists.txt  README.md  XYZ_hr_cal.mat  XYZ_lr_cal.mat  aluminum_sheet_biases.mat  aluminum_sheet_couplings.mat  aluminum_sheet_posesukf_no_dynamics.mat  biases.mat  calibration.mat  callgrind.out.1229  callgrind.out.2563  callgrind.out.29401  callgrind.out.30210  callgrind.out.32572  callgrind.out.4122  cukf.cpp  cukf.h  data.mat  dual_rate_ukf.cpp  dual_rate_ukf.h  eigentest  eigentest.cpp  high_rate_ukf.cpp  low_rate_ukf.cpp  noise_still_30s_biases.mat  todo.txt
cmake/: FindMatio.cmake
include/UKF/: Core.h
